# qa_guru_16

./: README.md
my_project/: pyproject.toml
