[project]
name = "my-project"
version = "0.1.0"
description = "My first poetry project"
authors = [
    {name = "Yaroslav Gusev",email = "yarigusev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"

[tool.poetry.dependencies]
pytest = "==8.3.4"
selene = "==2.0.0rc9"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
